public/stylesheets/default.css
/** Main styles **/

body {
  font: 10pt "Lucida Sans", Helvetica, Verdana, Sans;
  color: #000;
  background-color: #fff;
  margin: 0;
  padding: 0;
}
h1 {
  font-family: "Corbel";
}

abbr {
  text-decoration: none;
  border: none;
}

a, a:visited {
  color: #0059be;
  text-decoration: none;
}


/** Forms and controls **/

input[type=text], input[type=password], select {
  padding: 0.3em;
  border: 1px solid #ccc;
  width:30em;
}
input[type=text]:hover, input[type=password]:hover, select:hover {
  border: 1px solid #444;
}
input[type=text]:focus, input[type=password]:focus, select:focus {
  border: 1px solid #444;
}
input[type=text][disabled], input[type=password][disabled], select[disabled] {
  border: 1px solid #ccc;
}
option {
}
optgroup {
  margin-bottom: 0.3em;
  padding-bottom: 0.3em;
  border-bottom: 1px solid #ccc;
}

form.button-to, form.button-to div {
  display: inline;
}
form.button-to input, a.button-to, button {
  font-size: 1em;
  font-weight: bold;
  border: none;
  padding: 0.3em 0.6em 0.3em 0.6em;
  margin: 0;
  color: #fff;
  background-color: #646060;
  cursor: pointer;
  text-decoration: none;
  -moz-border-radius: 2px;
  -webkit-border-radius: 4px;
}
form.button-to input:hover, a.button-to:hover, button:hover {
  border: none;
  color: #fff;
  background-color: #504c4c;
}
form.button-to input[disabled], button[disabled] {
  background-color: #ccc;
  cursor: default;
}

form dl {
  margin: 0 0 1em 0;
}
form dl dt {
}
form dl dd {
  margin: 0.3em 0 1em 0;
}

fieldset {
  border: 2pt solid #ccc;
  padding: 1em;
}

/*
form div.fieldWithErrors {
  color: red;
  display: inline;
}
*/
div#errorExplanation p, div#errorExplanation ul {
  margin: 0;
  list-style: none;
}


/** Header **/

#header {
  background-color: #e8e8e8;
  padding: 0.5em 3em 3px 3em;
  border-bottom: solid 2px #055da4;
}
#header h1 {
  font-size: 2.2em;
  font-weight: bold;
  margin: 0 auto 0.7em auto;
  float: left;
}
#header h1 a {
  color: #404040;
  text-decoration: none;
}
#header ul.links {
  list-style: none;
  margin: 0;
  float: right  
}
#header ul.links li {
  display: inline;
  margin: 0;
  padding: 0.5em;
}
#header ul.links li a {
  text-decoration: none;
}


#header ul.tabs {
  clear: both;
  list-style: none;
  margin: 0;
  padding: 0;
}
#header ul.tabs li {
  display: inline;
  margin-right: 0.6em;
  padding: 0;
}
#header ul.tabs li a {
  color: #eee;
  font-size: 1.2em;
  font-weight: bold;
  text-decoration: none;
  background-color: #0081d1; 
  padding: 0.3em 0.9em 0.3em 0.9em;
  -moz-border-radius: 4px 4px 0 0;
  -webkit-border-top-left-radius: 6px;
  -webkit-border-top-right-radius: 6px;
}
#header ul.tabs li a:hover, #header ul.tabs li a.current {
  background-color: #055da4;
}
#header ul.alternate {
  margin-top: -1.3em;
}


/** Feed and calendar links **/

ul.alternate {
  margin: 0;
  list-style: none;
  float: right;
  position: relative;
}
ul.alternate li {
  display: inline;
}
ul.alternate a {
  padding-left: 1em;
  text-decoration: none;
}
ul.alternate img {
  border: none;
  vertical-align: bottom;
  margin: 0.1em;
}


/** Tasks list **/

table.tasks {
  width: 100%;
  border-spacing: 0;
  border-padding: 0;
  border: none;
  margin: 0;
  padding:2em 2.5em 2em 2.5em;
  font-size: 1.1em;
  table-layout: fixed;
}
table.tasks thead th {
  text-align: left;
  font-weight: bold;
  padding: 0.5em;
  margin: 0;
  border-bottom: 1px solid #ccc;
}
table.tasks tbody td {
  text-align: left;
  vertical-align: top;
  padding: 0.5em;
  margin: 0;
  border-bottom: 1px solid #ddd;
  text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
}
table.tasks tbody td img {
  vertical-align: middle;
}
table.tasks tbody tr.inactive, table.tasks tbody tr.inactive td a {
  color: #888;
}
table.tasks tbody tr.overdue td, table.tasks tbody .overdue td a {
  color: #f04040;
}
table.tasks tbody td .priority_1 {
  color: #f04040;
}


/** Chronological list **/

ol.dates {
  font-size: 1.1em;
  list-style: none;
  margin: 2em 3em 2em 3em;
  padding: 0;
}
ol.dates li.date {
  padding-bottom: 1em;
}
ol.dates li.date h2 {
  font-size: 1.2em;
  border-bottom: 1px solid #ccc;
}
ol.dates li.date ol.tasks {
  list-style: none;
  margin: 0;
  padding: 0;
}
ol.dates li.date ol.tasks li.task {
  margin: 0 0 1.0em 0;
}
ol.dates li.date abbr.updated {
  color: #666;
  font-size: 0.8em;
  margin-right: 0.6em;
}


/** Activities **/

ol.activities {
  list-style: none;
  padding: 0;
}
ol.activities li.activity {
  margin: 0 0 1.0em 0;
}
ol.activities li.activity abbr.published {
  color: #666;
  font-size: 0.8em;
  margin-right: 0.6em;
}


/** Single task **/

div.task {
  margin: 0;
  padding: 0;
  background-color: #fff;
}
div.task div.header {
  position: absolute;
  width: 100%;
  margin: 0;
  padding: 0;
  background-color: #e8e8e8;
  border-bottom: solid 2px #055da4;
}
div.task div.header h1 {
  display: inline;
  float: left;
  font-size: 1.5em;
  margin: 0.6em 2em 0 2.0em;
}
div.task div.header h1 a {
  color: #404040;
}

div.task div.header div.vitals {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}
div.task div.header div.vitals p {
  margin: 0.3em 0 0.3em 0;
  text-overflow: ellipsis;
  overflow: hidden;
}
div.task div.header div.vitals p.title {
  font-weight: bold;
}
div.task div.header div.actions {
  display: inline;
  float: right;
  margin: 0.9em 2.5em 0.5em 0;
  white-space: nowrap;
}
div.task div.header div.actions .button-to {
  margin-left: 0.6em;
}

div.task div.details {
  clear: both;
  padding: 1em 3em 2em 3em;
  border-top: 1px solid #ccc;
  margin: 0;
  background-color: #e8e8e8;
}
div.task div.details dt {
  font-weight: bold;
  float: left;
  position: relative;
  display: inline;
}
div.task div.details dd {
  margin: 0 0 1em 10em;
  min-height: 1.3em;
}
div.task div.details ol.activities {
  margin: 0;
}
div.task div.details div.actions {
  margin: 1em 0 1em 0;
}
div.task div.details div.actions select {
  width: 10em;
  margin: 0 0.6em 0 0.6em;
}

div.task div.description {
  padding: 3em;
}

div.task iframe {
  border: 0;
  width: 100%;
  height: 0;
  padding: 0;
  margin: 3.5em 0 0 0;
  background: #fff;
}

div.task div.footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  margin: 0;
  padding: 0.3em 3em 0.3em 3em;
  background-color: #e8e8e8;
  border-top: solid 2px #055da4;
}
div.task div.footer .actions {
  margin-right: 3em;
  padding-right: 3em;
  text-align: right;
}
div.task div.footer .actions .button-to {
  margin-left: 1em;
}


/** Footer **/

#footer {
}


/** Login **/
form.login {
  width: 30em;
  margin: 2em auto 2em auto;
}
form.login dl {
  width: 25em;
  margin: 0 auto 0 auto;
}
form.login input {
  width: 100%;
}

